--- a/content/education/omscs/cs-6200.md
+++ b/content/education/omscs/cs-6200.md
@@ -5,7 +5,7 @@ aliases:
   - gios
 ---
 
-My first class I took at Georgia Tech's OMSCS program was cs-6200, or Graduate Introduction to Operating Systems (**GIOS**). I took it in **Spring 2024**. This is my first formal CS class, ever. I took a couple in college but they were mostly fluff and designed around numerical applications of code. I took it alongside [[cs-7674|ml4t]].
+My first class I took at Georgia Tech's OMSCS program was cs-6200, or Graduate Introduction to Operating Systems (**GIOS**). I took it in **Spring 2024**. This is my first formal CS class, ever. I took a couple in college but they were mostly fluff and designed around numerical applications of code. I took it alongside [[Content/education/omscs/cs-7674|ml4t]].
 
 I loved the class. It's probably my favorite class I've taken in anything, ever.
 
@@ -17,12 +17,12 @@ The projects don't really reflect "OS development". It's more, "you're developin
 
 ### Notes I wrote because of this class
 
-[[sending-fds-through-uds]]: I utilized this in Project 3.
+[[Content/programming/operating-systems/linux/sending-fds-through-uds|sending-fds-through-uds]]: I utilized this in Project 3.
 
-[[fcntl-atomic-locks]]: I utilized this in Project 3, though I had to scrap my usage of it because I discovered it doesn't work as expected.
+[[Content/programming/operating-systems/linux/fcntl-atomic-locks|fcntl-atomic-locks]]: I utilized this in Project 3, though I had to scrap my usage of it because I discovered it doesn't work as expected.
 
-[[macos-native-docker]]: The class environment is an Ubuntu 20.04 x86 environment, I needed to run a class-provided docker image to perfectly replicate our testing environment to make sure I wasn't dealing with quirks. I use a M1 Pro Macbook 14 that I absolutely adore, and didn't want to deal with a Cloud VM to develop.
+[[Content/programming/operating-systems/macos/macos-native-docker|macos-native-docker]]: The class environment is an Ubuntu 20.04 x86 environment, I needed to run a class-provided docker image to perfectly replicate our testing environment to make sure I wasn't dealing with quirks. I use a M1 Pro Macbook 14 that I absolutely adore, and didn't want to deal with a Cloud VM to develop.
 
-[[basic-fstream]]: I spent over 3 hours debugging this problem in Project 4. I hate C++.
+[[Content/programming/languages/cpp/things-i-hate-about-cpp/basic-fstream|basic-fstream]]: I spent over 3 hours debugging this problem in Project 4. I hate C++.
 
-[[destructive-moves]]: A design choice I made in Project 4 was rendered impossible due to this.
+[[Content/programming/languages/cpp/things-i-hate-about-cpp/destructive-moves|destructive-moves]]: A design choice I made in Project 4 was rendered impossible due to this.
