--- a/content/education/omscs/cs-7674.md
+++ b/content/education/omscs/cs-7674.md
@@ -5,7 +5,7 @@ aliases:
   - ml4t
 ---
 
-My second class at OMSCS was cs-7674, Machine Learning for Trading (**ML4T**). I thought it was... alright? It's mostly just Python stuff, of which I'm very familiar with. I took it alongside [[cs-6200|gios]]. It's kind of like an introduction into data science techniques with a focus on ML. Now I'm not an ML person at all, my undergraduate background is in economics and math, but ML is just statistical models. I came in not knowing much and breezed through the class with said knowledge of statistics.
+My second class at OMSCS was cs-7674, Machine Learning for Trading (**ML4T**). I thought it was... alright? It's mostly just Python stuff, of which I'm very familiar with. I took it alongside [[Content/education/omscs/cs-6200|gios]]. It's kind of like an introduction into data science techniques with a focus on ML. Now I'm not an ML person at all, my undergraduate background is in economics and math, but ML is just statistical models. I came in not knowing much and breezed through the class with said knowledge of statistics.
 
 I'm probably killing my career by saying ML isn't really my cup of tea. Honestly, stocks aren't either, I'm a believer in the Efficient Market Hypothesis and [[stocks|buy $VTSAX and chill]]. I'm more interested in ML from a mathematical standpoint, this class is mostly Applied ML. It'll certainly help you get a job, if that's what you're looking for.
 
