Revert to static-based date handling
Signed-off-by: Abhi Agarwal <abhiaagarwal01@gmail.com>

--- a/content/education/omscs/cs-6200.md
+++ b/content/education/omscs/cs-6200.md
@@ -1,8 +1,7 @@
 ---
-tags:
-  - thoughts
-aliases:
-  - gios
+tags: [thoughts]
+aliases: [gios]
+published: '2024-04-07'
 ---
 
 My first class I took at Georgia Tech's OMSCS program was cs-6200, or Graduate Introduction to Operating Systems (**GIOS**). I took it in **Spring 2024**. This is my first formal CS class, ever. I took a couple in college but they were mostly fluff and designed around numerical applications of code. I took it alongside [[Content/education/omscs/cs-7674|ml4t]].
