--- a/content/education/omscs/iyse-6420.md
+++ b/content/education/omscs/iyse-6420.md
@@ -1,8 +1,7 @@
 ---
-tags:
-  - thoughts
-aliases:
-  - bayes
+tags: [thoughts]
+aliases: [bayes]
+published: '2025-01-11'
 ---
 
 I took IYSE-6420, Bayesian Statistics in Fall of 2024.
